--- a/Slutprojekt/style.css
+++ b/Slutprojekt/style.css
@@ -12,6 +12,14 @@
     font-size: 13px;
     background-color:#425eb4;
 	}
-#log{ float: left;
-	
+.log{ font-size: 60px;
+	color: red;
+	font-style: bold;
+
+}
+body{
+	font-family: verdana;
+}
+header{
+	box-shadow: 0px 1px 8px -1px rgba(0,0,0,0.7);
 }
