--- a/Slutprojekt/style.css
+++ b/Slutprojekt/style.css
@@ -9,7 +9,6 @@
     padding: 0;
     text-align: justify;
     font-family: Gugi, cursive;
-
     font-size: 13px;
     background-color:#425eb4;
 	}
@@ -18,8 +17,13 @@
 	font-style: bold;
 
 }
-.btn{
+.row{
 	font-family: Gugi, cursive;
+
+}
+.btn{
+	
+	color: #E80C94;
 }
 header{
 	box-shadow: 0px 1px 8px -1px rgba(0,0,0,0.7);
@@ -40,5 +44,10 @@ header{
 	border-radius: 50%;
 	max-width: 120px;
 }
+.klocka{
 
+}
+.caroussel{
+	max-height: 300px;
+}
 
